--- a/main/404.html
+++ b/main/404.html
@@ -57,13 +57,15 @@
 
 
 
-<link rel="preload" href="/kubeflow-manifests/main/scss/main.min.8e19d503dc21f6c6cf4fc5e28fb0ba07d2e0fc64f2245365f16c8e79c3f69bf1.css" as="style">
-<link href="/kubeflow-manifests/main/scss/main.min.8e19d503dc21f6c6cf4fc5e28fb0ba07d2e0fc64f2245365f16c8e79c3f69bf1.css" rel="stylesheet" integrity="">
+<link rel="preload" href="/kubeflow-manifests/main/scss/main.min.d4cdf056e7fec167a88188ac189ff1d0c621bc679a1c21f94903c8e057677df2.css" as="style">
+<link href="/kubeflow-manifests/main/scss/main.min.d4cdf056e7fec167a88188ac189ff1d0c621bc679a1c21f94903c8e057677df2.css" rel="stylesheet" integrity="">
 
 <script
   src="https://code.jquery.com/jquery-3.5.1.min.js"
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3" />
 
 
   </head>
@@ -79,6 +81,10 @@
 	</button>
 	<div class="collapse navbar-collapse ml-md-auto" id="main_navbar">
 		<ul class="navbar-nav ml-auto pt-4 pt-md-0 my-2 my-md-1">
+			<li class="nav-item mr-2 mr-lg-4 mt-1 mt-lg-0">
+				<div id="docsearch"></div>
+			</li>
+
 			
 			
 			<li class="nav-item mr-2 mr-lg-4 mt-1 mt-lg-0">
@@ -135,6 +141,7 @@
 			
 		</ul>
 	</div>
+	
 </nav>
 
     </header>
@@ -162,7 +169,7 @@
         
       </div>
       <div class="col text-center py-2 order-sm-2">
-        <small class="text-white">&copy; 2022 The Kubeflow on AWS Authors.</small>
+        <small class="text-white">&copy; 2023 The Kubeflow on AWS Authors.</small>
         
 	
       </div>
@@ -206,6 +213,28 @@
 
 
 
+
+<script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3"></script>
+
+<script type="text/javascript">
+
+docsearch({
+
+appId: 'A1FXAERJE4',
+
+apiKey: '88f3a753878f24ffdcd3d786be775545',
+
+indexName: 'kubeflow-manifests',
+
+container: '#docsearch',
+
+searchParameters: {
+    facetFilters: ["version: main "],
+  },
+debug: true 
+
+});
+</script>
 
 
 
